--- a/README
+++ b/README
@@ -17,6 +17,7 @@ This is veejay from http://code.dyne.org/veejay/ with some changes to veejay-ser
  * FEMMS, apparently an AMD-specific instruction, was used on my Intel machine.
    Commented this out somewhere in the configure stuff, not properly removed though.
  * Quit event: Ctrl+Q and window manager close event exits veejay-server.
+ * commented out some unused variables in veejay_t / video_playback_setup
  * Lots of formatting, which probably can't be carried over to the newer
    https://github.com/c0ntrol/veejay repo -- which I only realized exists AFTER
    I made those changes. :/
